force-app/main/default/objects/Disaster__c/Disaster__c.object-meta.xml
<CustomObject>
    <label>Disaster</label>
    <nameField>
        <label>Disaster Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Disasters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>