force-app/main/default/objects/Disaster__c/fields/Affected_Counties__c.field-meta.xml
<CustomField>
    <fullName>Affected_Counties__c</fullName>
    <label>Affected Counties</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>