force-app/main/default/objects/Disaster__c/fields/Disaster_Type__c.field-meta.xml
<CustomField>
    <fullName>Disaster_Type__c</fullName>
    <label>Disaster Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cyclone</fullName>
            </value>
            <value>
                <fullName>Earthquake</fullName>
            </value>
            <value>
                <fullName>Flood</fullName>
            </value>
            <value>
                <fullName>Hurricane</fullName>
            </value>
            <value>
                <fullName>Pandemic</fullName>
            </value>
            <value>
                <fullName>Tsunami</fullName>
            </value>
            <value>
                <fullName>Wildfire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>