force-app/main/default/objects/Disaster__c/fields/Response_Commander__c.field-meta.xml
<CustomField>
    <fullName>Response_Commander__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Response Commander</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Disasters</relationshipName>
    <type>Lookup</type>
</CustomField>