force-app/main/default/objects/Disaster__c/validationRules/End_Date_After_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_After_Start_Date</fullName>
    <active>true</active>
    <description>End date must be after start date</description>
    <errorConditionFormula>AND( NOT(ISBLANK( End_Date__c )) , NOT( ISBLANK( Start_Date__c )), End_Date__c  &lt;=  Start_Date__c  )</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End date must be after start date</errorMessage>
</ValidationRule>